# patch_linemod

./: .gitignore  README.md  notes.md  patch_linemod_test.py
linemodLevelup/: CMakeLists.txt  linemodLevelup.cpp  linemodLevelup.h  pose_refine.cpp  pose_refine.h  pose_renderer.cpp  pose_renderer.h  pose_tree.cpp  pose_tree.h  pybind11.cpp  setup.py  test.cpp
linemodLevelup/cuda_icp/: CMakeLists.txt  icp.cpp  icp.cu  icp.h  test.cpp
linemodLevelup/cuda_icp/scene/: common.cpp  common.cu  common.h
linemodLevelup/cuda_icp/scene/depth_scene/: depth_scene.cpp  depth_scene.cu  depth_scene.h
linemodLevelup/cuda_icp/scene/pcd_scene/: pcd_scene.cpp  pcd_scene.cu  pcd_scene.h
linemodLevelup/cuda_renderer/: CMakeLists.txt  renderer.cpp  renderer.cu  renderer.h  test.cpp
pysixd/: view_sampler.py
tools/: eval_calc_errors.py  eval_loc.py
